Agregar botón de menú hamburguesa en la barra de navegación

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <li></li>
             </ul>
         </nav>
+        <button class="hamburger" id="btn-hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
     </header>
 </body>
 </html>
