Agregar secciones de navegación y contenido a las páginas "Sobre mí", "Títulos y certificados" y "Contacto"

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About</title>
 </head>
 
 <body>
-    <!-- NAVIGATION BAR -->
+    <!-- Navigation bar -->
     <header class="header">
         <div class="icon"></div>
         <nav class="nav" id="nav-menu">
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="HTML/certificates.html">Títulos y certificados</a></li>
-                <li><a href="HTML/about.html">Sobre mí</a></li>
-                <li><a href="HTML/contact.html">Contacto</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="certificates.html">Títulos y certificados</a></li>
+                <li><a href="about.html">Sobre mí</a></li>
+                <li><a href="contact.html">Contacto</a></li>
             </ul>
         </nav>
-        <button class="hamburger" id="btn-hamburger">
+        <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
