--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Inicio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -30,6 +31,13 @@
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2025 Gabriel Sanchez Heredia. Todos los derechos reservados.</p>
+
+        <!-- Social Networks -->
+        <div class="social-icons">
+        <a href="mailto:gabiisnchez@proton.me" title="Envíame un correo"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/gabrielsanher" target="_blank" title="Mi perfil de LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/gabiisnchez" target="_blank" title="Mi perfil de GitHub"><i class="fab fa-github"></i></a>
+    </div>
     </footer>
 </body>
 </html>
