Agregar sección "Sobre mí" con contenido introductorio y estilos CSS, y añadir funcionalidad de scroll suave en JavaScript

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mí</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/about.css">
 </head>
 
 <body>
@@ -26,21 +27,29 @@
         </button>
     </header>
 
-    <!-- About Section -->
+    <!-- Intro Section -->
+    <section class="intro-section">
+        <div class="intro-container">
+            <div class="intro-text">
+                <h1>Hola, soy Gabriel Sanchez Heredia</h1>
+                <h2>Soy estudiante del ciclo formativo de grado superior en Desarrollo de Aplicaciones Multiplataforma</h2>
+            </div>
+            <div class="intro-image">
+                <img src="tu-foto.jpg" alt="Foto de Gabriel Sanchez Heredia">
+            </div>
+        </div>
+        <!-- Flecha hacia abajo -->
+        <div class="scroll-down">
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    <!-- About Section (scroll down) -->
     <section class="about-section" id="about">
         <div class="about-container">
-
-            <!-- My photo -->
-            <div>
-                <img src="" class="about-img" alt="Foto de Gabriel Sanchez Heredia">
-            </div>
-
-            <!-- About me text -->
-            <h1>Sobre mí</h1>
             <p>
-                ¡Hola! Soy Gabriel Sanchez Heredia, actualmente estoy estudiando el ciclo formativo de grado superior en Desarrollo de Aplicaciones Multiplataforma.
-                Mi pasión por la tecnología me impulsa a aprender cada día y explorar nuevas formas de crear soluciones digitales. Estoy especialmente interesado en 
-                el desarrollo de software y busco seguir creciendo como programador, adquiriendo nuevas habilidades y trabajando en proyectos desafiantes que me permitan aplicar lo que aprendo.
+                Mi pasión por la tecnología me impulsa a aprender cada día y explorar nuevas formas de crear soluciones digitales.
+                Estoy especialmente interesado en el desarrollo de software y busco seguir creciendo como programador, adquiriendo nuevas habilidades y trabajando en proyectos desafiantes que me permitan aplicar lo que aprendo.
             </p>
             <p>
                 Mi objetivo es combinar mi formación académica con mi experiencia práctica, para contribuir a proyectos que tengan un impacto real, mientras sigo perfeccionando mi dominio en programación y tecnologías emergentes.
@@ -65,5 +74,6 @@
         <a href="https://github.com/gabiisnchez" target="_blank" title="Mi perfil de GitHub"><i class="fab fa-github"></i></a>
     </div>
     </footer>
+    <script src="../JS/about.js"></script>
 </body>
 </html>
