Actualizar comentarios en CSS y HTML para mejorar la claridad del código

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -38,7 +38,7 @@
                 <img src="tu-foto.jpg" alt="Foto de Gabriel Sanchez Heredia">
             </div>
         </div>
-        <!-- Flecha hacia abajo -->
+        <!-- Animated arrow -->
         <div class="scroll-down">
             <i class="fas fa-chevron-down"></i>
         </div>
