Refactorizar la estructura del código y eliminar secciones redundantes para mejorar la legibilidad y el mantenimiento. Añadir estructura y archivos de certificados necesarios.

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Títulos y certificados</title>
+    <title>Certificados</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
@@ -26,7 +26,301 @@
         </button>
     </header>
 
-    
+    <!-- Certificates Grid -->
+    <main>
+        <section id="certificates-grid"></section>
+        <h2>Mis certificados</h2>
+        <div class="grid-container">
+
+            <!-- Certificates -->
+            <div class="cert-card">
+                <h3>Curso de C# intermedio</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c#_intermedio.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+                
+            <div class="cert-card">
+                <h3>Curso de C# para principiantes</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c#_para_principiantes.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Git</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_git.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Introducción a la programación con Pseudocódigo</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_introducción_a_la_programación_con_pseudocódigo.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Java desde 0: Records, Genéricos y Colecciones</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_java_desde_0__records_genéricos_y_colecciones.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Java desde 0: Orientación a Objetos</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_java_desde_0__orientación_a_objetos.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Java desde 0: Introducción</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_java_desde_0__introducción.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Operaciones fundamentales sobre procesos de Linux y editores de terminal</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_operaciones_fundamentales_sobre_procesos_de_linux_y_editores_de_terminal.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Desarrollo de componentes custom para Flows</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__desarrollo_de_componentes_custom_para_flows.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Informes y Paneles</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__informes_y_paneles.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Migración de Workflow Rules y Process Builder a Flows</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__migración_de_workflow_rules_y_process_builder_a_flows.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Objetos estándar y personalizados</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__objetos_estándar_y_personalizados.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Seguridad y acceso a datos</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__seguridad_y_acceso_a_datos.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Salesforce: Uso de Flows para automatización de procesos</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Marzo 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_salesforce__uso_de_flows_para_automatización_de_procesos.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Administración de BBDD con MySQL: Procedicimientos almacenados y relaciones</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_administración_de_bbdd_con_mysql__procedimientos_almacenados_y_relaciones.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Administración de BBDD con MySQL: Sentencias DDL y DML</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_administración_de_bbdd_con_mysql__sentencias_ddl_y_dml.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Administración de BBDD con MySQL: Sentencias DDL y DML</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_administración_de_bbdd_con_mysql__sentencias_ddl_y_dml.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Aumenta tu productividad con IntelliJ</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_aumenta_tu_productividad_con_intellij.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Aumenta tu productividad con Visual Studio Code</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_aumenta_tu_productividad_con_visual_studio_code.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Crea aplicaciones de escritorio con JavaFX</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_crea_aplicaciones_de_escritorio_con_javafx.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Creación de BBDD para eCommerce con MySQL</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_creación_de_bbdd_para_ecommerce_con_mysql.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de HTML5 y CSS3</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_html5_y_css3.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Introducción a pruebas unitarias automáticas ocn JUnit 5</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_introducción_a_pruebas_automáticas_con_junit_5.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Java XML</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_java_xml.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Odoo</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_odoo.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de Solid y patrones de diseño</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_solid_y_patrones_de_diseño.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de SQL desde Cero</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_sql_desde_cero.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de TDD: Test-drive development</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_tdd__test-driven_development.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de creación y administración de Bases de Datos SQL</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_creación_y_administración_de_bases_de_datos_sql.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de introducción al testing</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_introducción_al_testing.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Curso de testing con BDD</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_testing_con_bdd.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Herramientas de testing para un desarrollador Java</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_herramientas_de_testing_para_un_desarrollador_java.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Implementación de Alta Disponibilidad y Réplicas en SQL</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_implementación_de_alta_disponibilidad_y_réplicas_en_sql.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Laboratorio de SalesForce: ¿Qué es y qué nos ofrece?</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_laboratorio_de_salesforce__¿qué_es_y_qué_nos_ofrece_.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Manejo profundo de SQL Server</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_manejo_profundo_de_sql_server.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Modularización con Java Jigsaw</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_modularización_con_java_jigsaw.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Patron de Diseño de Estrategia con C#</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_patrón_de_diseño_de_estrategia_con_c#.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Profundizado en la Seguridad en SQL Server</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_profundizando_en_la_seguridad_en_sql_server.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>SQL Server desde Cero</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_sql_server_desde_cero.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>Seguridad y Backups en SQL Server</h3>
+                <p class="issuer">OpenWebinars</p>
+                <p class="date">Febrero 2025</p>
+                <a href="../SOURCES/CERTIFICATES/certificado_seguridad_y_backups_en_sql_server.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+
+            <div class="cert-card">
+                <h3>AWS Cloud Quest: Cloud Practitioner</h3>
+                <p class="issuer">Amazon Web Services (AWS)</p>
+                <p class="date">Enero 2025</p>
+                <a href="https://www.credly.com/badges/d5713741-dbf9-458a-b7fd-495aac2fcbb9/linked_in_profile" class="btn-cert" target="_blank">Ver certificado</a>
+            </div>
+        </div>
+    </main>
 
     <!-- Footer -->
     <footer class="footer">
