Refactorizar la estructura del código y mejorar el rendimiento en múltiples módulos. Agregar archivo CSS para dar estilo a la página.

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificados</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/certificates.css">
 </head>
 
 <body>
@@ -26,10 +27,14 @@
         </button>
     </header>
 
+    <!-- Hero Section -->
+    <section id="hero-certificates">
+        <h1>Mis certificados</h1>
+    </section>
+
     <!-- Certificates Grid -->
-    <main>
-        <section id="certificates-grid"></section>
-        <h2>Mis certificados</h2>
+    <section id="certificates-grid">
+        <h2>Certificados obtenidos</h2>
         <div class="grid-container">
 
             <!-- Certificates -->
@@ -37,14 +42,14 @@
                 <h3>Curso de C# intermedio</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
-                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c#_intermedio.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c_intermedio.pdf" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
                 
             <div class="cert-card">
                 <h3>Curso de C# para principiantes</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Marzo 2025</p>
-                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c#_para_principiantes.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+                <a href="../SOURCES/CERTIFICATES/certificado_curso_de_c_para_principiantes.pdf" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
             <div class="cert-card">
@@ -289,7 +294,8 @@
                 <h3>Patron de Diseño de Estrategia con C#</h3>
                 <p class="issuer">OpenWebinars</p>
                 <p class="date">Febrero 2025</p>
-                <a href="../SOURCES/CERTIFICATES/certificado_patrón_de_diseño_de_estrategia_con_c#.pdf" class="btn-cert" target="_blank">Ver certificado</a>
+                <a href="../SOURCES/CERTIFICATES/certificado_patrón_de_diseño_de_estrategia_con_c
+                .pdf" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
 
             <div class="cert-card">
@@ -320,7 +326,8 @@
                 <a href="https://www.credly.com/badges/d5713741-dbf9-458a-b7fd-495aac2fcbb9/linked_in_profile" class="btn-cert" target="_blank">Ver certificado</a>
             </div>
         </div>
-    </main>
+    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -328,10 +335,12 @@
 
         <!-- Social Networks -->
         <div class="social-icons">
-        <a href="mailto:gabiisnchez@proton.me" title="Envíame un correo"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/gabrielsanher" target="_blank" title="Mi perfil de LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/gabiisnchez" target="_blank" title="Mi perfil de GitHub"><i class="fab fa-github"></i></a>
-    </div>
+            <a href="mailto:gabiisnchez@proton.me" title="Envíame un correo"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/gabrielsanher" target="_blank" title="Mi perfil de LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/gabiisnchez" target="_blank" title="Mi perfil de GitHub"><i class="fab fa-github"></i></a>
+        </div>
     </footer>
+
+    <script src="../JS/certificates.js"></script>
 </body>
 </html>
