Agregar transiciones para la navegación, además de mejorar la responsividad y el estilo de los elementos en CSS.

--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -15,7 +15,7 @@
         <nav class="nav" id="nav-menu">
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="certificates.html">Títulos y certificados</a></li>
+                <li><a href="certificates.html">Certificados</a></li>
                 <li><a href="about.html">Sobre mí</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
