--- a/HTML/certificates.html
+++ b/HTML/certificates.html
@@ -11,20 +11,22 @@
 <body>
     <!-- Navigation bar -->
     <header class="header">
-        <div class="icon"></div>
-        <nav class="nav" id="nav-menu">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="certificates.html">Certificados</a></li>
-                <li><a href="about.html">Sobre mí</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </button>
+        <div class="header-container">
+            <div class="icon"></div>
+            <nav class="nav" id="nav-menu">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="certificates.html">Certificados</a></li>
+                    <li><a href="about.html">Sobre mí</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+        </div>
     </header>
 
     <!-- Hero Section -->
