--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/main.css">
 </head>
 
 <body>
-    <!-- NAVIGATION BAR -->
+    <!-- Navigation bar -->
     <header class="header">
-        <div class="icon"></div>
-        <nav class="nav" id="nav-menu">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="HTML/certificates.html">Títulos y certificados</a></li>
-                <li><a href="HTML/about.html">Sobre mí</a></li>
-                <li><a href="HTML/contact.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <button class="hamburger" id="btn-hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </button>
+        <div class="header-container">
+            <div class="icon"></div>
+            <nav class="nav" id="nav-menu">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="HTML/certificates.html">Certificados</a></li>
+                    <li><a href="HTML/about.html">Sobre mí</a></li>
+                    <li><a href="HTML/contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+            <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+        </div>
     </header>
 
     
