Reorganizar el botón de menú hamburguesa en las secciones de navegación y actualizar enlaces para mejorar la estructura de navegación.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
             <div class="icon"></div>
             <nav class="nav" id="nav-menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="HTML/certificates.html">Certificados</a></li>
-                    <li><a href="HTML/about.html">Sobre mí</a></li>
-                    <li><a href="HTML/contact.html">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="certificates.html">Certificados</a></li>
+                    <li><a href="about.html">Sobre mí</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
                 </ul>
             </nav>
-            <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
         </div>
+        <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
     </header>
 
     
