--- a/index.html
+++ b/index.html
@@ -13,20 +13,34 @@
     <header class="header">
         <div class="header-container">
             <div class="icon"></div>
-            <nav class="nav" id="nav-menu">
+
+            <!-- Nav escritorio -->
+            <nav class="nav" id="nav-menu-desktop">
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="certificates.html">Certificados</a></li>
-                    <li><a href="about.html">Sobre mí</a></li>
-                    <li><a href="contact.html">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="HTML/certificates.html">Certificados</a></li>
+                    <li><a href="HTML/about.html">Sobre mí</a></li>
+                    <li><a href="HTML/contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
+
+        <!-- Botón hamburguesa -->
         <button class="hamburger" id="btn-hamburger" aria-label="Abrir menú de navegación">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
         </button>
+        
+        <!-- Overlay menú móvil -->
+        <nav class="nav overlay" id="nav-menu">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="HTML/certificates.html">Certificados</a></li>
+                <li><a href="HTML/about.html">Sobre mí</a></li>
+                <li><a href="HTML/contact.html">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
 
     
@@ -42,5 +56,7 @@
         <a href="https://github.com/gabiisnchez" target="_blank" title="Mi perfil de GitHub"><i class="fab fa-github"></i></a>
     </div>
     </footer>
+
+    <script src="../JS/main.js"></script>
 </body>
 </html>
