Agregar icono de usuario en la navegación para móviles y ajustar estilos de contenedor

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,9 +12,12 @@
 <body>
     <!-- Navigation bar -->
     <header class="header">
-        <div class="header-container">
-            <div class="icon"></div>
 
+        <!-- Icono de usuario (solo móvil) -->
+        <div class="icon"><i class="fas fa-user"></i></div>
+
+        <div class="header-container">
+            
             <!-- Nav escritorio -->
             <nav class="nav" id="nav-menu-desktop">
                 <ul>
