Actualizar encabezado en la sección de introducción para mejorar la claridad del mensaje.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -52,7 +52,7 @@
         <div class="intro-container">
             <div class="intro-text">
                 <h1>Hola, soy Gabriel Sanchez Heredia</h1>
-                <h2>Soy estudiante del ciclo formativo de grado superior en Desarrollo de Aplicaciones Multiplataforma</h2>
+                <h2>Estudiante del ciclo formativo de grado superior en Desarrollo de Aplicaciones Multiplataforma</h2>
             </div>
             <div class="intro-image">
                 <img src="tu-foto.jpg" alt="Foto de Gabriel Sanchez Heredia">
