Traducir contenido de la sección de contacto al español para mejorar la accesibilidad y la experiencia del usuario.

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -46,25 +46,25 @@
     <main>
         <!-- Hero Section -->
         <section id="hero-contact">
-            <h1>Contact Me</h1>
+            <h1>Contáctame</h1>
         </section>
 
         <!-- Contact Section -->
         <section id="contact-section">
             <div class="contact-container">
 
-                <!-- Left Column: Intro message + contact info -->
+                <!-- Left column: message + contact info -->
                 <div class="contact-left">
-                    <h2>Let's Talk About Your Project</h2>
+                    <h2>Hablemos de tu proyecto</h2>
 
                     <!-- Introductory message -->
                     <p class="contact-intro">
-                        Do you have a project in mind, an exciting idea, or just want to say hello?
-                        I would love to get to know you and discuss how we can create something amazing together.
-                        Don't hesitate to send me a message; I promise to get back to you as soon as possible.
+                        ¿Tienes un proyecto en mente, una idea emocionante o simplemente quieres decir hola?
+                        Me encantaría conocerte y charlar sobre cómo podemos crear algo increíble juntos. 
+                        No dudes en enviarme un mensaje; prometo responderte lo antes posible.
                     </p>
 
-                    <!-- Contact Information -->
+                    <!-- Contact info -->
                     <div class="contact-info">
                         <p><i class="fas fa-envelope"></i> <a href="mailto:gabiisnchez@proton.me">gabiisnchez@proton.me</a></p>
                         <p><i class="fas fa-phone"></i> +34 637 26 16 25</p>
@@ -73,33 +73,33 @@
                     </div>
 
                     <!-- Success message -->
-                    <p class="success-message" id="success-message">Thank you! Your message has been sent.</p>
+                    <p class="success-message" id="success-message">¡Gracias! Tu mensaje ha sido enviado.</p>
                 </div>
 
-                <!-- Right Column: Contact form -->
+                <!-- Right column: form -->
                 <div class="contact-right">
                     <form id="contact-form">
                         <div class="form-group">
-                            <label for="name">Name</label>
+                            <label for="name">Nombre</label>
                             <input type="text" id="name" name="name" required>
                         </div>
 
                         <div class="form-group">
-                            <label for="email">Email</label>
+                            <label for="email">Correo</label>
                             <input type="email" id="email" name="email" required>
                         </div>
 
                         <div class="form-group">
-                            <label for="subject">Subject</label>
+                            <label for="subject">Asunto</label>
                             <input type="text" id="subject" name="subject">
                         </div>
 
                         <div class="form-group">
-                            <label for="message">Message</label>
+                            <label for="message">Mensaje</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
 
-                        <button type="submit" class="btn-send">Send Message</button>
+                        <button type="submit" class="btn-send">Enviar mensaje</button>
                     </form>
                 </div>
 
