--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -119,6 +119,7 @@
     </footer>
 
     <script src="../JS/main.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="../JS/contact.js"></script>
 </body>
 </html>
